--- a/Hippo/UIView/TableViewCell/SelfMessageTableViewCell/SelfMessageTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/SelfMessageTableViewCell/SelfMessageTableViewCell.xib
@@ -11,19 +11,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="SelfMessageTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelfMessageTableViewCell" rowHeight="309" id="3C7-pA-zEk" customClass="SelfMessageTableViewCell" customModule="HippoChat" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="SelfMessageTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelfMessageTableViewCell" rowHeight="309" id="3C7-pA-zEk" customClass="SelfMessageTableViewCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="309"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3C7-pA-zEk" id="1ex-sp-f9D">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="308.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zRm-ci-UkK" customClass="So_UIView" customModule="HippoChat" customModuleProvider="target">
-                        <rect key="frame" x="288" y="3.5" width="78.5" height="63.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zRm-ci-UkK" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="288" y="11" width="78.5" height="58"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hxj-9Y-swx">
-                        <rect key="frame" x="289.5" y="5" width="75.5" height="60.5"/>
+                        <rect key="frame" x="289.5" y="7" width="75.5" height="60.5"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="z42-eL-Oml">
                                 <rect key="frame" x="5" y="5" width="60.5" height="33"/>
@@ -61,16 +61,16 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VGR-ha-gOM">
-                        <rect key="frame" x="0.0" y="67.5" width="375" height="45"/>
+                        <rect key="frame" x="0.0" y="69.5" width="375" height="45"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="warningIcon" translatesAutoresizingMaskIntoConstraints="NO" id="dL2-Ya-uaD" customClass="So_UIImageView" customModule="HippoChat" customModuleProvider="target">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="warningIcon" translatesAutoresizingMaskIntoConstraints="NO" id="dL2-Ya-uaD" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
                                 <rect key="frame" x="176" y="3" width="16" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="1Ju-aF-wy5"/>
                                     <constraint firstAttribute="width" secondItem="dL2-Ya-uaD" secondAttribute="height" multiplier="1:1" id="hdy-i6-072"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Couldn't send the message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ0-lR-oj6" customClass="So_CustomLabel" customModule="HippoChat" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Couldn't send the message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ0-lR-oj6" customClass="So_CustomLabel" customModule="Hippo" customModuleProvider="target">
                                 <rect key="frame" x="194" y="3" width="176" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -126,7 +126,7 @@
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="21K-oK-uLQ">
-                        <rect key="frame" x="264.5" y="40.5" width="25" height="25"/>
+                        <rect key="frame" x="264.5" y="42.5" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="21K-oK-uLQ" secondAttribute="height" multiplier="1:1" id="1qb-qk-72f"/>
                             <constraint firstAttribute="height" constant="25" id="EtJ-WH-KY1"/>
@@ -142,11 +142,11 @@
                     <constraint firstItem="zRm-ci-UkK" firstAttribute="trailing" secondItem="Hxj-9Y-swx" secondAttribute="trailing" constant="1.5" id="WKE-IZ-Jmm"/>
                     <constraint firstItem="Hxj-9Y-swx" firstAttribute="leading" secondItem="21K-oK-uLQ" secondAttribute="trailing" id="dDq-sJ-W8N"/>
                     <constraint firstItem="VGR-ha-gOM" firstAttribute="top" secondItem="Hxj-9Y-swx" secondAttribute="bottom" constant="2" id="hIc-VD-GQe"/>
-                    <constraint firstItem="zRm-ci-UkK" firstAttribute="top" secondItem="Hxj-9Y-swx" secondAttribute="top" constant="-1.5" id="iyI-0t-PT1"/>
+                    <constraint firstItem="zRm-ci-UkK" firstAttribute="top" secondItem="Hxj-9Y-swx" secondAttribute="top" constant="4" id="iyI-0t-PT1"/>
                     <constraint firstItem="zRm-ci-UkK" firstAttribute="bottom" secondItem="Hxj-9Y-swx" secondAttribute="bottom" constant="1.5" id="jt0-xq-mYf"/>
                     <constraint firstItem="21K-oK-uLQ" firstAttribute="bottom" secondItem="Hxj-9Y-swx" secondAttribute="bottom" id="lr7-ZB-TZs"/>
                     <constraint firstItem="VGR-ha-gOM" firstAttribute="centerX" secondItem="1ex-sp-f9D" secondAttribute="centerX" id="qre-vx-Rch"/>
-                    <constraint firstItem="Hxj-9Y-swx" firstAttribute="top" secondItem="1ex-sp-f9D" secondAttribute="top" constant="5" id="uAB-bW-xNx"/>
+                    <constraint firstItem="Hxj-9Y-swx" firstAttribute="top" secondItem="1ex-sp-f9D" secondAttribute="top" constant="7" id="uAB-bW-xNx"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -170,7 +170,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="readMessageImage" width="10" height="10"/>
+        <image name="readMessageImage" width="16" height="9"/>
         <image name="warningIcon" width="24" height="24"/>
     </resources>
 </document>
